--- a/fabcar/package.json
+++ b/fabcar/package.json
@@ -2,7 +2,7 @@
     "name": "fabcar",
     "version": "1.0.0",
     "description": "Hyperledger Fabric Car Sample Application",
-    "main": "fabcar.js",
+    "main": "fabcar.go",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
